# SecRepoBench

./: .gitignore  README.md  analyze_eval_report.py  analyze_unit_tests.py  api_request.py  api_request_cosec.py  arvo.py  augment_with_cfc.py  augment_with_cfc_func.py  augment_with_dense_func.py  combine_eval_reports.py  combine_reports.py  constants.py  context_len_limits.json  create_desc_prompts.py  cwe_map.py  eval.py  evaler.py  experiments.py  extract_var.py  filter.py  final_ids.txt  get_context_len_limits.py  get_desc.py  get_file_context.py  get_ids.py  get_new_var.py  get_project_ids.py  get_repos.py  get_top40_ids.py  github_repos.json  id2var.json  ids.txt  ids_91.txt  ids_bad_local_var.txt  ids_top40_mask.txt  in_file_truncation.py  insert_print.py  mask.py  mask_func.py  (+16 more)
.ssh/: id_rsa  id_rsa.pub
analyze_report/: ids_each_step.json  ids_each_step_by_proj.json  proj_sample_distribution.json  proj_sample_distribution_singles.json
assets/: constants.py  projects.py
eval_results/: grouped_results.csv  grouped_results_legacy.csv  raw_eval_results.csv  raw_eval_results.pkl
filter_logs/: proj_samples.csv  repo_read_errors.csv  samples_each_step.json  samples_each_step_final_counts.csv  top_40.json
harnesses/: aider_harness.py  claudecode_harness.py  codex_harness.py  codex_review_harness.py  openhands_harness.py
plot/: scatter.py
sec_code_plt/: cache.json  compare_sec_policy.py  cwe_to_sec_policy.json  get_sec_policy.py  make_security_policy_prompt.py
tools/: evaler.py  patcher.py  preprocessor.py  report_analyzer.py
unit-tests/: unit_test_urls.csv  (+3 more)
(+52660 files in other folders)
