[project]
name = "project-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.3.0",
    "anthropic>=0.72.0",
    "audioop-lts>=0.2.2",
    "backoff>=2.2.1",
    "claude-agent-sdk>=0.1.6",
    "dotenv>=0.9.9",
    "gitpython>=3.1.45",
    "google-generativeai>=0.8.5",
    "levenshtein>=0.27.3",
    "lizard>=1.18.0",
    "matplotlib>=3.10.7",
    "mistral-common>=1.8.5",
    "nltk>=3.9.2",
    "openai>=2.6.1",
    "pandas>=2.3.3",
    "pydriller>=2.9",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
    "tree-sitter-cpp>=0.23.4",
    "unidiff>=0.7.5",
]
