[project]
name = "project-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alive-progress>=3.3.0",
    "anthropic>=0.72.0",
    "backoff>=2.2.1",
    "claude-agent-sdk>=0.1.6",
    "dotenv>=0.9.9",
    "gitpython>=3.1.45",
    "google-generativeai>=0.8.5",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
